--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "sass-loader": "^8.0.2",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "webpack-dev-middleware": "^4.0.2"
   }
 }
